<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context="capstone.schwendimankw.campingapp.MainActivity">

    <Button
        android:id="@+id/planning_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/planning_button" />

    <Button
        android:id="@+id/camping_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/camping_button" />

    <Button
        android:id="@+id/surviving_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/surviving_button" />

</LinearLayout>
