<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/date_picker_checklist_titleTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:paddingLeft="4dp"
        android:paddingRight="4dp"
        android:text="@string/date_picker_checklist_title"
        android:textStyle="bold"/>

    <EditText
        android:id="@+id/date_picker_checklist_titleEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@id/date_picker_checklist_titleTextView"
        android:hint="@string/checklist_title_hint"/>

    <TextView
        android:id="@+id/date_picker_date_titleTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/date_picker_checklist_titleEditText"
        android:paddingLeft="4dp"
        android:paddingRight="4dp"
        android:text="@string/date_picker_title"
        android:textStyle="bold"/>

    <DatePicker
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/dialog_date_picker"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/date_picker_date_titleTextView"
        android:calendarViewShown="false"
        android:datePickerMode="spinner">

    </DatePicker>
</RelativeLayout>